syntax="proto2";
package gsp;

option java_package="com.gproject.common.dto.proto";
option java_outer_classname="GameInitDTO";


message GetGameTokenReq{
  optional  string opneId=1;
  optional  string token=2;
}

message GetGameTokenRet{
  optional string openId=1;
  required  int64 playerId=2;
  required  int64 time=3;
  required   string sign=4;
}

message GetRolesReq{
  optional  string openId=1;
}

message PlayerRole{
  required  int64 playerId=1;
  required  int64 roleName=2; 
}

message GetRolesRet{
  optional  string openId=1;
}